deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mvp-sample-front
  annotations:
    #ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ssl-redirect: "false"
spec:
  #tls:
  #  - secretName: cloudb-secret
  rules:
    - host: front.169.56.115.153.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: mvp-sample-front
              servicePort: 8081
